# aws-etl-challenge

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  main.py  pyproject.toml  setup.cfg
sample_data/: jh_data.csv  nyt_data.csv
src/: data_fetch.py  data_load.py  data_transform.py
tests/: test_data_fetch.py
