[tool.poetry]
name = "aws-etl-challenge"
version = "0.1.0"
description = "ACloudGuru AWS ETL Challenge"
authors = ["Yahyaa <kogam22@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
boto3 = "^1.18.18"
pandas = "^1.3.1"
nox = "^2021.6.12"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.5"}
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
mypy = "^0.910"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
