[tool.poetry]
name = "aws-etl-challenge"
version = "0.1.0"
description = "ACloudGuru AWS ETL Challenge"
authors = ["Yahyaa <kogam22@gmail.com>"]
readme = "Readme.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.6"
requests = "^2.26.0"
boto3 = "^1.18.18"
pandas = "^1.3.1"
nox = "^2021.6.12"
psycopg2 = "^2.9.1"
SQLAlchemy = "^1.4.23"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.5"}
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
mypy = "^0.910"
black = "^20.8b1"
pre-commit = "^2.14.0"
pytest-cov = "^2.12.1"
isort = "^5.9.3"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
